added network conf, volumes conf

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,30 @@
-version: '2'
+version: "3.9"
 
 volumes:
+  mariadb:
   nextcloud:
-  db:
-
+  haproxy:
+  
 services:
-  db:
-    image: mariadb
+  mariadb:
+    image: mariadb:10.8-jammy
     restart: always
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     volumes:
-      - db:/var/lib/mysql
+      - mariadb:/var/lib/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_PASSWORD=nextcloud
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
+    networks:
+      - backend
 
-  app:
-    image: nextcloud
+  nextcloud:
+    image: nextcloud:24.0-apache
     restart: always
-    ports:
-      - 8080:80
-    links:
-      - db
+    #    ports:
+      #  - 8080:80
     volumes:
       - nextcloud:/var/www/html
     environment:
@@ -31,3 +32,20 @@ services:
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
       - MYSQL_HOST=db
+    networks:
+      - frontend
+      - backend
+
+  haproxy:
+    image: haproxy:2.6
+    restart: always
+    ports:
+      - 8080:80
+    networks:
+      - frontend
+    volumes:
+      - haproxy:/etc/haproxy
+
+networks:
+  frontend:
+  backend:
