update haproxy.cfg, docker compose file

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -8,3 +8,7 @@ defaults
 frontend nextcloud_frontend
   bind :80
 #  bind 62.24.24.22:443 
+  default_backend nextcloud_backend
+
+backend nextcloud_backend
+  server server1 docker-nextcloud-nextcloud-1:80 
