--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -10,4 +10,4 @@ frontend nextcloud_frontend
   default_backend nextcloud_backend
 
 backend nextcloud_backend
-  server server1 docker-nextcloud-nextcloud-1:80 
+  server app nextcloud:80 
